# DriftGuard

./: ABOUT.md  CONTRIBUTING.md  DIAGRAM.md  HOSTING.md  IMPLEMENTATION.md  LICENSE.md  README.md  test-deployment.yaml
.github/: CODEOWNERS  SECURITY.md  auto-merge.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: bot-commands.yml  issue-management.yml  pr-checks.yml  security.yml
ai/: .gitignore  app.py  pyproject.toml
ai/src/graphs/: graph_builder.py
ai/src/llm/: openai_llm.py
ai/src/nodes/: basic_chatbot_node.py  drift_aware_chatbot_node.py
ai/src/tools/: driftguard_tool.py
backend/: EFFICIENCY_OPTIONS.md  ENHANCED_DRIFT_DETECTION.md  README.md  RESOURCE_MONITORING.md  go.mod  go.sum  test-drift.sh
backend/cmd/controller/: main.go  main_test.go
backend/configs/: config.yaml
backend/internal/config/: config.go
backend/internal/controller/: controller.go
backend/internal/database/: database.go
backend/internal/detector/: detector.go
backend/internal/git/: git.go
backend/internal/health/: health.go  health_test.go
backend/internal/kubernetes/: client.go
backend/internal/lifecycle/: lifecycle.go
backend/internal/logger/: logger.go
backend/internal/mcp/: client.go
backend/internal/metrics/: metrics.go
backend/internal/server/: server.go
backend/internal/watcher/: watcher.go
smartserve-chatbot/: README.md  app.py  config.example.env  requirements.txt  test_driftguard_integration.py  test_slack_integration.py
(+4 files in other folders)
